# pdc-tracker

./: .env.example  .gitignore  Procfile  migrate_to_pg.py  pyproject.toml  railway.cron-agenda.toml  railway.cron-sync.toml  railway.toml
pdc/: agenda_check.py  cli.py  config.py  db.py  email_alerts.py  storage.py  sync_runner.py
pdc/compare/: api_vs_agenda.py  report.py
pdc/ingest/: agenda_parser.py  agenda_scraper.py  announcements.py  socrata.py  wayback.py  youtube.py
pdc/transform/: linker.py  matcher.py  normalize.py  stage_tracker.py
pdc/web/: __init__.py
pdc/web/routes/: about.py  alerts.py  home.py  meetings.py  projects.py  transcripts.py
pdc/web/static/css/: style.css
pdc/web/static/js/: search.js
pdc/web/templates/: 404.html  500.html  _project_card.html  _timeline.html  about.html  base.html  home.html  meeting_detail.html  meeting_list.html  project_detail.html  project_list.html  search_results.html  subscribe.html  transcript_search.html
